--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -234,22 +234,13 @@ set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_directory_text "#{pane_current_path}"
+#set -g @catppuccin_directory_text "#{b:pane_current_path}"
 #set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
-
-# uncomment if tpm is not working
-# run-shell tmux-sensible/sensible.tmux
-# run-shell tmux-continuum/continuum.tmux
-# run-shell tmux-fpp/fpp.tmux
-# run-shell tmux-fzf/main.tmux
-# run-shell tmux-resurrect/resurrect.tmux
-# run-shell vim-tmux-navigator/vim-tmux-navigator.tmux
-# run-shell tmux/catppuccin.tmux
-# run-shell tmux-yank/yank.tmux
 
 ###############################################################################
 # generate default config
