Replaced xsel with xclip in tmux conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,16 +46,22 @@ unbind -T copy-mode-vi MouseDrag1Pane
 # Update default binding of `Enter` to also use copy-pipe
 bind Enter copy-mode # enter copy mode
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
-bind -T copy-modei   MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
-bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
-bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+bind -T copy-modei   MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+bind -T copy-mode    C-c send -X copy-pipe-no-clear "xclip -i -selection clipboard"
+bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xclip -i -selection-clipboard"
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+#bind -T copy-modei   MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+#bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+#bind -T copy-mode    C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+#bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection \; select-pane
 
 # use system clipboard
 set -g set-clipboard on
-set -s copy-command 'xsel -i'
+set -s copy-command 'xclip -i -selection clipboard'
+#set -s copy-command 'xsel -i --clipboard'
 
 # window navigation
 unbind n
@@ -173,7 +179,8 @@ set -g message-style 'fg=colour226 bg=colour22 bold'
 bind b list-buffers     # list paste buffers
 bind p paste-buffer -p  # paste from the top paste buffer
 bind P choose-buffer    # choose which buffer to paste from
-bind o run "tmux set-buffer -b clipb \"`xsel -o --clipboard`\"; tmux paste-buffer -b clipb"
+bind o run "tmux set-buffer -b clipb \"`xclip -o -selection clipboard`\"; tmux paste-buffer -b clipb"
+#bind o run "tmux set-buffer -b clipb \"`xsel -o --clipboard`\"; tmux paste-buffer -b clipb"
 
 ###############################################################################
 # reload config file - r
