--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -18,6 +18,7 @@ symbol = " "
 
 [directory]
 read_only = " 󰌾"
+style='#0030ff'
 
 [docker_context]
 symbol = " "
@@ -55,7 +56,7 @@ symbol = " "
 [hostname]
 ssh_symbol = " "
 ssh_only = false
-format = '[$ssh_symbol](bold blue) on [$hostname](bold yellow) '
+format = '[$ssh_symbol](bold blue) on [$hostname](#9b009b) '
 trim_at = '.companyname.com'
 disabled = false
 
@@ -165,8 +166,9 @@ symbol = " "
 
 [time]
 disabled = false
+style='#4682b4'
 format = '🕙[\[ $time \]]($style) '
-time_format = '%a %b %d %T'
+time_format = '%b %d %T'
 
 [git_commit]
 commit_hash_length = 4
@@ -179,6 +181,6 @@ cherry_pick = '[🍒 PICKING](bold red)'
 [custom.load]
 command = 'uptime | cut -d "," -f4'
 when = true
-style='bold magenta'
-format = 'load [$output]($style)'
+style='bold #daa520'
+format = '[load](#6b8e23) [$output]($style)'
 shell = ['/usr/bin/bash']
